SUBDIRS = src data po

# Extra clean files so that maintainer-clean removes *everything*
MAINTAINERCLEANFILES = aclocal.m4 config.guess config.sub \
                       configure depcomp install-sh ltmain.sh \
                       Makefile.in missing \
                       mkinstalldirs \
                       intltool-extract intltool-merge intltool-update


